Fix alignment of container-main and title of collab.html

--- a/index.css
+++ b/index.css
@@ -142,12 +142,12 @@ html {
 
     .container-main {
         display: flex;
-        flex-direction: row;
         width: 85%;
-        height: 100%;
+        min-height: 100%;
         background-color: rgb(25, 25, 25, 0.70);
         padding: 2% 1%;
         margin: 0 auto;
+        justify-content: center;
         letter-spacing: 0.01rem;
         color: whitesmoke;
     }
